change in job description

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <title>Intuition engineered—human insight, superhuman speed | Cognizant India</title>
     <link rel="icon" type="image" href="https://yt3.googleusercontent.com/YbaRi4yKK88z0U9E_vY5K-YVQVozeJKk58N1AAJn4icwA-Zaj3rYw6V9_ZSosT81DSvYeQWEk0w=s900-c-k-c0x00ffffff-no-rj" />
     
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.css" rel="stylesheet" />
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.0.0/flowbite.min.css" rel="stylesheet" /> -->
     
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,5 +14,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="./node_modules/flowbite/dist/datepicker.js"></script>
   </body>
 </html>
